Fix the style of the language selection dropdown.
If the selection is active the background color as well as the color was white and therefore the language options were unreadable.
Fix by setting the color to white only if selection is not active.

--- a/ncp-web/css/ncp.css
+++ b/ncp-web/css/ncp.css
@@ -1377,6 +1377,10 @@ a#versionlink:hover {
 
 #language-selection {
   border: none;
+}
+
+/* Show selected language in white color because the background is blue. If the selection is active, don't change the color because the background is white. */
+#language-selection:not(:active) {
   color: white;
 }
 
